syntax = "proto3";

message TestPostProcess {
  message UnknownReplacement {
    string lexicon_path = 1;
  }
  UnknownReplacement unknown_replacement = 1;
}
