syntax = "proto3";

import "train_config.proto";
import "updates.proto";

message BatchIndex {
  repeated uint64 value = 1;
}

message TrainState {
  uint32 finished_epoch = 1;
  map<uint32, TrainingConfig> start_epochs = 2;
}

message NmtrainState {
 
  repeated EpochUpdate train_updates = 1;

  repeated EpochUpdate dev_updates = 2;

  repeated EpochUpdate test_updates = 3;

  map<string, double> test_score = 4;

  TrainState train_state = 5;
}
